--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,6 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
+TOKEN=token from gradle.properties
 
 org.gradle.java.home=D\:/work/.jdks/corretto-11.0.13
