--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
+apply plugin: 'kotlin-android'
 
 android {
     compileSdk 32
@@ -14,6 +15,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        flavorDimensions "versionCode"
     }
     dataBinding {
         enabled = true
@@ -22,13 +25,17 @@ android {
 
     buildTypes {
         release {
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+
             resValue("string","app_token","token_release")
             resValue("bool","rel","false")
             resValue("integer","num","0")
 
             resValue("string","app_token_properties","${TOKEN}")
+
         }
         debug{
             resValue("string","app_token","token_debug")
@@ -36,6 +43,21 @@ android {
             resValue("integer","num","1")
 
             resValue("string","app_token_properties","${TOKEN}")
+        }
+    }
+    //配置多个渠道
+    productFlavors {
+        cqtest {
+            //dimension = "full"
+            resValue("string","flavor","cqtest")
+        }
+        pre {
+            //dimension = "full"
+            resValue("string","flavor","pre")
+        }
+        dev {
+            //dimension = "full"
+            resValue("string","flavor","dev")
         }
     }
     compileOptions {
@@ -56,4 +78,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+//repositories {
+//    mavenCentral()
+//}
